# fastapi-caching-route

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: coverage.yaml  deploy-docs.yaml  deploy-pypi.yaml  pr.yaml
.zed/: settings.json
docs/api_reference/: fastapi_cache.md
examples/: README.md  complex.py  curl-format.txt  invalidate.py  simple.py
fastapi_caching_route/: __init__.py  main.py
tests/: ruff.toml  test_main.py
