[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "fastapi-caching-route"
description = "FastAPI route for efficient caching."
authors = [{name = "Petr Tsymbarovich", email = "petr@tsymbarovich.ru"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]

dependencies = [
    "aiocache>=0.12,<1.0",
]

[dependency-groups]
dev = [
    "fastapi~=0.138",
    "griffe-typingdoc~=0.3",
    "httpx~=0.28",
    "markdown-include~=0.8",
    "mkdocs-material~=9.7",
    "mkdocs~=1.6",
    "mkdocstrings[python]~=1.0",
    "mypy~=1.7",
    "pytest-cov~=7.0",
    "pytest~=9.0",
    "ruff~=0.14",
    "uvicorn[standard]~=0.49",
]

[project.urls]
Homepage = "https://github.com/mentaljam/fastapi-caching-route"
Repository = "https://github.com/mentaljam/fastapi-caching-route.git"
Issues = "https://github.com/mentaljam/fastapi-caching-route/issues"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "fastapi_caching_route/_version.py"
template = '''
version = "{version}"
'''

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
show-fixes = true
output-format = "full"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", "D107", "D105", "PLR0913",
    "COM812", "ISC001", "Q000", "Q003",  # Handled by ruff format
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
known-local-folder = ["examples"]

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
    "examples",
    "fastapi_caching_route",
    "tests",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["aiocache.*"]
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["fastapi_caching_route"]
