[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "fastapi-caching-route"
description = "FastAPI route for efficient caching."
authors = [{name = "Petr Tsymbarovich", email = "petr@tsymbarovich.ru"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

dependencies = [
    "aiocache>=0.12,<1.0",
]

[dependency-groups]
dev = [
    "fastapi~=0.138",
    "httpx2~=2.5",
    "pytest-cov~=7.1",
    "pytest~=9.1",
    "ruff~=0.15",
    "ty>=0.0.56",
    "uvicorn[standard]~=0.49",
]
docs = [
    "griffe-typingdoc~=0.3",
    "markdown-include~=0.8",
    "mkdocs-material~=9.7",
    "mkdocstrings[python]~=1.0",
    "mkdocs~=1.6",
]

[project.urls]
Homepage = "https://github.com/AgroDT/fastapi-caching-route"
Repository = "https://github.com/AgroDT/fastapi-caching-route.git"
Issues = "https://github.com/AgroDT/fastapi-caching-route/issues"
Documentation = "https://agrodt.github.io/fastapi-caching-route/"
Coverage = "https://coveralls.io/github/AgroDT/fastapi-caching-route"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "fastapi_caching_route/_version.py"
template = '''
version = "{version}"
'''

[tool.pytest]
testpaths = ["tests"]
addopts = ["--cov=fastapi_caching_route"]

[tool.ruff]
target-version = "py310"
line-length = 100
show-fixes = true
output-format = "full"
include = [
    "examples/*.py",
    "examples/README.md",
    "fastapi_caching_route/*.py",
    "fastapi_caching_route/*.pyi",
    "tests/*.py",
    "pyproject.toml",
    "README.md",
]

[tool.ruff.format]
quote-style = "single"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", "D107", "D105", "PLR0913",
    "COM812", "ISC001", "Q000", "Q003",  # Handled by ruff format
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
known-local-folder = ["examples"]

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ty.src]
include = [
    "examples",
    "fastapi_caching_route",
    "tests",
]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.coverage.run]
source_pkgs = ["fastapi_caching_route"]
